ec2-call/ec2-module/sg.tf
locals {
  ingress-config = [
    { descr = "Elasticsearch port", protocol = "tcp", from_port = 9200, to_port = 9200, cidr_blocks = ["0.0.0.0/0"] },
    { descr = "Logstash ports", protocol = "tcp", from_port = 5043, to_port = 5044, cidr_blocks = ["0.0.0.0/0"] },
    { descr = "Kibana port", protocol = "tcp", from_port = 5601, to_port = 5601, cidr_blocks = ["0.0.0.0/0"]},
    { descr = "Ssh port", protocol = "tcp", from_port = 22, to_port = 22, cidr_blocks = ["0.0.0.0/0"]  },

  ]
}

resource "aws_security_group" "elk_sg" {
  name        = "elk_sg"
  description = "All all elasticsearch traffic"

  dynamic "ingress" {
    for_each = local.ingress-config
    content {
      description = ingress.value.descr
      from_port = ingress.value.from_port
      protocol  = ingress.value.protocol
      to_port   = ingress.value.to_port
      cidr_blocks = ingress.value.cidr_blocks
    }
  }
  # outbound
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
